<resources>
    <string name="app_name">Matin_Noohnezhad_Assignment_6</string>

    <string name="hostUrl">https://api.backendless.com</string>
    <string name="appId">97069498-660C-1F69-FF09-24F42D349B00</string>
    <string name="apiKey">C263F81D-CE22-4BCE-A43B-32CD322CB61A</string>

    <string name="network_connection_error">Cannot access internet!</string>
    <string name="network_general_error">Failed to save data to server!</string>
    <string name="network_json_error">Failed to interpret the data to/from server!</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="confirm_pass">Confrim Password</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="language">Language</string>
    <string name="send_confirm">Send Confirmation To:</string>
    <string name="email">Email</string>
    <string name="sms">Sms</string>
    <string name="due_tasks">Due Tasks</string>
    <string name="export_tasks">Export Tasks</string>
    <string name="import_tasks">Import Tasks</string>
    <string name="new_task">New Task</string>
    <string name="task_name">Task Name</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="type">Type</string>
    <string name="profile">Profile</string>
    <string name="archived_tasks">Archived Tasks</string>
    <string name="exit">Exit</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string-array name="langs_array">
        <item>English</item>
        <item>Persian</item>
        <item>Arabic</item>
        <item>French</item>
    </string-array>
    <string-array name="task_type_array">
        <item>JOB</item>
        <item>UNIVERSITY</item>
        <item>SHOPPING</item>
        <item>KHEDMAT</item>
        <item>EBADAT</item>
        <item>NEZAFAT</item>
    </string-array>
    <string name="dialog_box_title">User Profile</string>
    <string name="dialog_box_message">my message</string>
    <string name="ok">OK</string>
    <string name="reading_file_error">خواندن محتوای فایل با مشکل همراه شد!</string>
    <string name="writing_file_error">نوشتن روی فایل با مشکل همراه شد!</string>
    <string name="file_path_not_provided_error">آدرس فایل مشخص نشد!</string>
    <string name="external_storage_not_ready_error">حافظه ی خارجی آماده ی استفاده نیست!</string>
    <string name="file_does_not_exist_error">چنین فایلی وجود ندارد!</string>
    <string name="writing_file_successful_message">نوشتن روی فایل با موفقیت انجام شد!</string>
    <string name="write_permission_grant_error">شما اجازه نوشتن روی فایل را ندادید!</string>
    <string name="read_permission_grant_error">شما اجازه خواندن فایل را ندادید!</string>
    <string name="reading_file_successful_message">خواندن محتوای فایل با موفقیت انجام شد!</string>
    <string name="network_sign_in_error">Failed in sign in operation in server!</string>
    <string name="network_sign_up_error">Failed to sign up in server!</string>
    <string name="network_check_user_token_validity_error">Failed to check user-token validity with server!!</string>
    <string name="network_add_new_task_error">Failed to add new task to server!!</string>
    <string name="network_remove_task_error">Failed to remove task from server!!</string>
    <string name="network_update_is_archived_task_error">Failed to update isArchived task field in server!!</string>
    <string name="network_get_all_task_error">Failed to getAll task of user from server!!</string>

</resources>
