<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="top"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/first_page_pic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/main_username_et"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:inputType="text"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/main_password_et"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="#3F51B5"
        android:onClick="signInClicked"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:backgroundTint="#ffffff"
            android:onClick="goToSignUpActivity"
            android:text="@string/sign_up"
            android:textAllCaps="false" />
    </LinearLayout>


</LinearLayout>